# Practika

./: CMakeCache.txt  CMakeLists.txt  Guest.qml  Main.qml  appborismaherskaya_qmltyperegistrations.cpp  barbershop.db  build.ninja  cmake_install.cmake  database.cpp  database.h  dopfile.qml  main.cpp  qtcsettings.cmake  Парикмахерская.lnk
BorisMaherskaya/: Login.qml  appBorisMaherskaya_qml_module_dir_map.qrc
appBorisMaherskaya_autogen/: deps  moc_predefs.h
appBorisMaherskaya_autogen/EWIEGA46WW/: moc_database.cpp.d
meta_types/: appBorisMaherskaya_json_file_list.txt  appBorisMaherskaya_json_file_list.txt.timestamp  qt6appborismaherskaya_metatypes.json
qmltypes/: appBorisMaherskaya_foreign_types.txt
